Add new tool to automatically generate CPP headers

--- a/tests/tools/Makefile
+++ b/tests/tools/Makefile
@@ -1,2 +1,3 @@
 all:
-	$(CC) -o rand rand_gen.c
+	$(DCC) $(the_DFLAGS) $(DCC_BASIC_O)$(BINDIR)/d_to_cpp d_to_cpp.d
+	$(CC) $(the_CFLAGS) -o $(BINDIR)/rand rand_gen.c
